# abcplus

./: CLAUDE.md  README.md
abc2stripchart/: hymnal_data.json  index.html
abc2stripchart/app/src/main/assets/: hymnal_data.json  index.html  thomas_280.json
harpdrills/: Cargo.toml  build-android.sh
harpdrills/res/values/: colors.xml
harpdrills/src/: abc.rs  lib.rs  main.rs  music.rs  notation.rs
scripts/: build_hymnal.py  build_hymnal_v3.py  build_thomas_280.py
trefoil/: trefoil_C.json
