[package]
name = "harpdrills"
version = "0.1.0"
edition = "2024"

[lib]
name = "harpdrills"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "harpdrills"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
winit = { version = "0.30", features = ["android-native-activity"] }

[features]
default = []
android = ["eframe/android-native-activity"]
